fix(QBtn): improve stretch #7381 (#7387)
- QBtnDropdown - allow main button to grow to fill the space
- QBrnGroup - fix missing specific border radius for push
- QBtnToggle - option settings have priority over global settings and add class and style
- QBtn - use specific class for stretch to allow easy customization and to allow button to grow

--- a/ui/src/components/btn/QBtn.sass
+++ b/ui/src/components/btn/QBtn.sass
@@ -92,6 +92,11 @@
   &--rounded
     border-radius: $button-rounded-border-radius
 
+  &--stretch
+    border-radius: 0
+    align-self: stretch
+    flex-grow: 1
+
   &--round
     border-radius: 50%
 
